--- a/examples/temp.ipynb
+++ b/examples/temp.ipynb
@@ -2,92 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['c:\\\\Users\\\\Jerzy\\\\Documents\\\\GitHub\\\\FEDOT', 'c:\\\\Users\\\\Jerzy\\\\Documents\\\\GitHub', 'c:\\\\Users\\\\Jerzy\\\\Documents\\\\GitHub\\\\FEDOT']\n"
+      "['/home/jerzy/Documents/GitHub/GitHub/FEDOT', '/home/jerzy/Documents/GitHub/GitHub', '/home/jerzy/Documents/GitHub/GitHub/FEDOT/examples']\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Cluster</th>\n",
-       "      <th>N_Vars</th>\n",
-       "      <th>Eigval1</th>\n",
-       "      <th>Eigval2</th>\n",
-       "      <th>VarProp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>176</td>\n",
-       "      <td>16.157499</td>\n",
-       "      <td>5.071076</td>\n",
-       "      <td>0.091804</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>115</td>\n",
-       "      <td>10.032055</td>\n",
-       "      <td>3.914703</td>\n",
-       "      <td>0.087235</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>105</td>\n",
-       "      <td>9.977103</td>\n",
-       "      <td>5.611692</td>\n",
-       "      <td>0.095020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>45</td>\n",
-       "      <td>5.774584</td>\n",
-       "      <td>2.417539</td>\n",
-       "      <td>0.128324</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Cluster N_Vars    Eigval1   Eigval2   VarProp\n",
-       "0       0    176  16.157499  5.071076  0.091804\n",
-       "1       1    115  10.032055  3.914703  0.087235\n",
-       "2       2    105   9.977103  5.611692  0.095020\n",
-       "3       3     45   5.774584  2.417539  0.128324"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39mdata/pigs.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     12\u001b[0m vc \u001b[39m=\u001b[39m VarClusHi(data, maxeigval2\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, maxclus\u001b[39m=\u001b[39m\u001b[39m4\u001b[39m)\n\u001b[0;32m---> 13\u001b[0m vc\u001b[39m.\u001b[39;49mvarclus()\n\u001b[1;32m     14\u001b[0m vc\u001b[39m.\u001b[39minfo\n",
+      "File \u001b[0;32m~/.conda/envs/fedot-bamt-dev/lib/python3.9/site-packages/varclushi/varclushi.py:215\u001b[0m, in \u001b[0;36mVarClusHi.varclus\u001b[0;34m(self, speedup)\u001b[0m\n\u001b[1;32m    212\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mspeedup \u001b[39m=\u001b[39m speedup\n\u001b[1;32m    214\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mspeedup \u001b[39mis\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m--> 215\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_varclusspu()\n\u001b[1;32m    217\u001b[0m ClusInfo \u001b[39m=\u001b[39m collections\u001b[39m.\u001b[39mnamedtuple(\u001b[39m'\u001b[39m\u001b[39mClusInfo\u001b[39m\u001b[39m'\u001b[39m, [\u001b[39m'\u001b[39m\u001b[39mclus\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39meigval1\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39meigval2\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mpc1\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mvarprop\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m    218\u001b[0m c_eigvals, _, c_princomps, c_varprops \u001b[39m=\u001b[39m VarClusHi\u001b[39m.\u001b[39mpca(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfeat_list])\n",
+      "File \u001b[0;32m~/.conda/envs/fedot-bamt-dev/lib/python3.9/site-packages/varclushi/varclushi.py:188\u001b[0m, in \u001b[0;36mVarClusHi._varclusspu\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    185\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    186\u001b[0m         clus2\u001b[39m.\u001b[39mappend(feat)\n\u001b[0;32m--> 188\u001b[0m fin_clus1, fin_clus2, _ \u001b[39m=\u001b[39m VarClusHi\u001b[39m.\u001b[39;49m_reassign_rs(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdf, clus1, clus2,\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mn_rs)\n\u001b[1;32m    189\u001b[0m c1_eigvals, c1_eigvecs, _, c1_varprops \u001b[39m=\u001b[39m VarClusHi\u001b[39m.\u001b[39mcorreig(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf[fin_clus1])\n\u001b[1;32m    190\u001b[0m c2_eigvals, c2_eigvecs, _, c2_varprops \u001b[39m=\u001b[39m VarClusHi\u001b[39m.\u001b[39mcorreig(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf[fin_clus2])\n",
+      "File \u001b[0;32m~/.conda/envs/fedot-bamt-dev/lib/python3.9/site-packages/varclushi/varclushi.py:128\u001b[0m, in \u001b[0;36mVarClusHi._reassign_rs\u001b[0;34m(df, clus1, clus2, n_rs)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[39m@staticmethod\u001b[39m\n\u001b[1;32m    125\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_reassign_rs\u001b[39m(df, clus1, clus2, n_rs\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[1;32m    127\u001b[0m     feat_list \u001b[39m=\u001b[39m clus1 \u001b[39m+\u001b[39m clus2\n\u001b[0;32m--> 128\u001b[0m     fin_rs_clus1, fin_rs_clus2, max_rs_var \u001b[39m=\u001b[39m VarClusHi\u001b[39m.\u001b[39;49m_reassign(df, clus1, clus2)\n\u001b[1;32m    130\u001b[0m     \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_rs):\n\u001b[1;32m    131\u001b[0m         random\u001b[39m.\u001b[39mshuffle(feat_list)\n",
+      "File \u001b[0;32m~/.conda/envs/fedot-bamt-dev/lib/python3.9/site-packages/varclushi/varclushi.py:111\u001b[0m, in \u001b[0;36mVarClusHi._reassign\u001b[0;34m(df, clus1, clus2, feat_list)\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    109\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[0;32m--> 111\u001b[0m new_var \u001b[39m=\u001b[39m VarClusHi\u001b[39m.\u001b[39;49m_calc_tot_var(df, new_clus1, new_clus2)[\u001b[39m0\u001b[39m]\n\u001b[1;32m    112\u001b[0m \u001b[39mif\u001b[39;00m new_var \u001b[39m>\u001b[39m check_var:\n\u001b[1;32m    113\u001b[0m     check_var \u001b[39m=\u001b[39m new_var\n",
+      "File \u001b[0;32m~/.conda/envs/fedot-bamt-dev/lib/python3.9/site-packages/varclushi/varclushi.py:80\u001b[0m, in \u001b[0;36mVarClusHi._calc_tot_var\u001b[0;34m(df, *clusters)\u001b[0m\n\u001b[1;32m     77\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m     79\u001b[0m c_len \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(clus)\n\u001b[0;32m---> 80\u001b[0m c_eigvals, _, _, c_varprops \u001b[39m=\u001b[39m VarClusHi\u001b[39m.\u001b[39;49mcorreig(df[clus])\n\u001b[1;32m     81\u001b[0m tot_var \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m c_eigvals[\u001b[39m0\u001b[39m]\n\u001b[1;32m     82\u001b[0m tot_prop \u001b[39m=\u001b[39m (tot_prop \u001b[39m*\u001b[39m tot_len \u001b[39m+\u001b[39m c_varprops[\u001b[39m0\u001b[39m] \u001b[39m*\u001b[39m c_len) \u001b[39m/\u001b[39m (tot_len \u001b[39m+\u001b[39m c_len)\n",
+      "File \u001b[0;32m~/.conda/envs/fedot-bamt-dev/lib/python3.9/site-packages/varclushi/varclushi.py:38\u001b[0m, in \u001b[0;36mVarClusHi.correig\u001b[0;34m(df, feat_list, n_pcs)\u001b[0m\n\u001b[1;32m     36\u001b[0m     varprops \u001b[39m=\u001b[39m [\u001b[39msum\u001b[39m(eigvals)]\n\u001b[1;32m     37\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 38\u001b[0m     corr \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mcorrcoef(df\u001b[39m.\u001b[39;49mvalues\u001b[39m.\u001b[39;49mT)\n\u001b[1;32m     39\u001b[0m     raw_eigvals, raw_eigvecs \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39meigh(corr)\n\u001b[1;32m     40\u001b[0m     idx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39margsort(raw_eigvals)[::\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mcorrcoef\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/.conda/envs/fedot-bamt-dev/lib/python3.9/site-packages/numpy/lib/function_base.py:2845\u001b[0m, in \u001b[0;36mcorrcoef\u001b[0;34m(x, y, rowvar, bias, ddof, dtype)\u001b[0m\n\u001b[1;32m   2841\u001b[0m \u001b[39mif\u001b[39;00m bias \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39m_NoValue \u001b[39mor\u001b[39;00m ddof \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39m_NoValue:\n\u001b[1;32m   2842\u001b[0m     \u001b[39m# 2015-03-15, 1.10\u001b[39;00m\n\u001b[1;32m   2843\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\u001b[39m'\u001b[39m\u001b[39mbias and ddof have no effect and are deprecated\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m   2844\u001b[0m                   \u001b[39mDeprecationWarning\u001b[39;00m, stacklevel\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n\u001b[0;32m-> 2845\u001b[0m c \u001b[39m=\u001b[39m cov(x, y, rowvar, dtype\u001b[39m=\u001b[39;49mdtype)\n\u001b[1;32m   2846\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   2847\u001b[0m     d \u001b[39m=\u001b[39m diag(c)\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mcov\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/.conda/envs/fedot-bamt-dev/lib/python3.9/site-packages/numpy/lib/function_base.py:2703\u001b[0m, in \u001b[0;36mcov\u001b[0;34m(m, y, rowvar, bias, ddof, fweights, aweights, dtype)\u001b[0m\n\u001b[1;32m   2701\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   2702\u001b[0m     X_T \u001b[39m=\u001b[39m (X\u001b[39m*\u001b[39mw)\u001b[39m.\u001b[39mT\n\u001b[0;32m-> 2703\u001b[0m c \u001b[39m=\u001b[39m dot(X, X_T\u001b[39m.\u001b[39;49mconj())\n\u001b[1;32m   2704\u001b[0m c \u001b[39m*\u001b[39m\u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mtrue_divide(\u001b[39m1\u001b[39m, fact)\n\u001b[1;32m   2705\u001b[0m \u001b[39mreturn\u001b[39;00m c\u001b[39m.\u001b[39msqueeze()\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mdot\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -101,7 +46,7 @@
     "import pandas as pd\n",
     "from varclushi import VarClusHi\n",
     "\n",
-    "data = pd.read_csv('data/pigs.csv')\n",
+    "data = pd.read_csv('data/arth150.csv')\n",
     "vc = VarClusHi(data, maxeigval2=1, maxclus=4)\n",
     "vc.varclus()\n",
     "vc.info"
@@ -382,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('bamt-fedot-dev')",
+   "display_name": "Python 3.9.13 ('fedot-bamt-dev')",
    "language": "python",
    "name": "python3"
   },
@@ -401,7 +346,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "96e738ce3ae8d669275d63dc68e0ea9201ac06082373048e56337b5458ec4942"
+    "hash": "6d442cd6a5e27aae824d33c72b8620e6107d172e542e17139be9078445b9839c"
    }
   }
  },
