added f1 score to the experiments

--- a/examples/SHD_time_estimate_hidden.ipynb
+++ b/examples/SHD_time_estimate_hidden.ipynb
@@ -11,17 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jerzypro/Documents/GitHub/FEDOT/fedot/utilities/requirements_notificator.py:13: UserWarning: \"opencv-python\" is not installed, use \"pip install .[extra]\" to fulfil or ignore this warning\n",
+      "  warnings.warn(f'{msg} or ignore this warning')\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from typing import Optional, Union, List\n",
     "\n",
-    "parentdir = '/home/jerzy/Documents/GitHub/jrzkaminski/FEDOT/'\n",
-    "bamtdir = '/home/jerzy/Documents/GitHub/jrzkaminski/BAMT/'\n",
+    "parentdir = '/Users/jerzypro/Documents/GitHub/FEDOT'\n",
+    "bamtdir = '/Users/jerzypro/Documents/GitHub/BAMT'\n",
     "sys.path.insert(0, parentdir)\n",
     "sys.path.insert(0, bamtdir)\n",
     "\n",
@@ -48,12 +57,16 @@
     "import numpy as np\n",
     "from copy import deepcopy\n",
     "from fedot.core.dag.graph import Graph\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['pdf.fonttype'] = 42\n",
+    "matplotlib.rcParams['ps.fonttype'] = 42"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -409,6 +422,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f1_score(custom_dag_edges, reference_dag_edges):\n",
+    "    # Calculate True Positives (tp), False Positives (fp), and False Negatives (fn)\n",
+    "    tp = fp = fn = 0\n",
+    "    for edge in custom_dag_edges:\n",
+    "        if edge in reference_dag_edges:\n",
+    "            tp += 1\n",
+    "        else:\n",
+    "            fp += 1\n",
+    "\n",
+    "    for edge in reference_dag_edges:\n",
+    "        if edge not in custom_dag_edges:\n",
+    "            fn += 1\n",
+    "\n",
+    "    # Calculate Precision and Recall\n",
+    "    if tp + fp == 0:\n",
+    "        precision = 0\n",
+    "    else:\n",
+    "        precision = tp / (tp + fp)\n",
+    "\n",
+    "    if tp + fn == 0:\n",
+    "        recall = 0\n",
+    "    else:\n",
+    "        recall = tp / (tp + fn)\n",
+    "\n",
+    "    # Calculate F1 Score\n",
+    "    if precision + recall == 0:\n",
+    "        f1 = 0\n",
+    "    else:\n",
+    "        f1 = 2 * precision * recall / (precision + recall)\n",
+    "\n",
+    "    return f1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false,
@@ -429,7 +481,16 @@
    },
    "outputs": [],
    "source": [
-    "precision_recall(pigs_evo, pigs_true.values.tolist())['SHD']"
+    "precision_recall(pigs_evo, pigs_true.values.tolist())['SHD']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_score(pigs_evo, pigs_true.values.tolist())"
    ]
   },
   {
@@ -443,11 +504,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "283"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "precision_recall(win95pts_true.values.tolist(), win95pts_evo)['SHD']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.28433734939759037"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1_score(win95pts_true.values.tolist(), win95pts_evo)"
    ]
   },
   {
@@ -474,6 +566,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "f1_score(hailfinder_true.values.tolist(), hailfinder_evo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hepar2_evo = get_edges_by_localstructures(hepar2, max_local_structures=4)\n"
    ]
   },
@@ -484,6 +585,15 @@
    "outputs": [],
    "source": [
     "precision_recall(hepar2_true.values.tolist(), hepar2_evo)['SHD']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_score(hepar2_true.values.tolist(), hepar2_evo)"
    ]
   },
   {
@@ -1365,7 +1475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
