added paralleization and elbow method

--- a/examples/SHD_time_estimate_hidden.ipynb
+++ b/examples/SHD_time_estimate_hidden.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,10 @@
     "    else:\n",
     "        f1 = 2 * precision * recall / (precision + recall)\n",
     "\n",
-    "    return f1\n"
+    "    return f1\n",
+    "\n",
+    "def convert_to_string(nested_list):\n",
+    "    return [[str(item) for item in inner_list] for inner_list in nested_list]\n"
    ]
   },
   {
@@ -481,7 +484,7 @@
    },
    "outputs": [],
    "source": [
-    "precision_recall(pigs_evo, pigs_true.values.tolist())['SHD']\n"
+    "precision_recall(convert_to_string(pigs_evo), pigs_true.values.tolist())['SHD']\n"
    ]
   },
   {
@@ -504,42 +507,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "283"
+       "721"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "precision_recall(win95pts_true.values.tolist(), win95pts_evo)['SHD']"
+    "precision_recall(win95pts_true.values.tolist(), convert_to_string(win95pts_evo))['SHD']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.28433734939759037"
+       "0.1687289088863892"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f1_score(win95pts_true.values.tolist(), win95pts_evo)"
+    "f1_score(win95pts_true.values.tolist(), convert_to_string(win95pts_evo))"
    ]
   },
   {
@@ -553,18 +556,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "121"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "precision_recall(hailfinder_true.values.tolist(), hailfinder_evo)['SHD']"
+    "precision_recall(hailfinder_true.values.tolist(), convert_to_string(hailfinder_evo))['SHD']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.26744186046511637"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f1_score(hailfinder_true.values.tolist(), hailfinder_evo)"
    ]
@@ -1304,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1346,7 @@
     "\n",
     "\n",
     "# define the range of variable counts you want to test\n",
-    "variable_counts = range(100, 441, 10)\n",
+    "variable_counts = range(100, 200, 20)\n",
     "\n",
     "# create an empty list to store the results\n",
     "results = []\n",
@@ -1385,7 +1410,11 @@
     " {'variables': 420, 'duration': 236.08180085817972},\n",
     " {'variables': 430, 'duration': 241.00591564178467},\n",
     " {'variables': 440, 'duration': 241.12759121259054}]\n",
-    " "
+    " \n",
+    "\n",
+    "results_m1_pro_8core = [\n",
+    "    \n",
+    "]"
    ]
   },
   {
