minor changes to experiments

--- a/examples/SHD_time_estimate_hidden.ipynb
+++ b/examples/SHD_time_estimate_hidden.ipynb
@@ -75,9 +75,9 @@
     "hailfinder = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/hailfinder.csv')\n",
     "hepar2 = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/hepar2.csv')\n",
     "arth150 = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/arth150.csv')\n",
-    "ecoli70 = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/ecoli70.csv')\n",
-    "magic_irri = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/magic-irri.csv')\n",
-    "magic_niab = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/magic-niab.csv')\n",
+    "ecoli70 = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/ecoli70.csv', index_col=0)\n",
+    "magic_irri = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/magic-irri.csv', index_col=0)\n",
+    "magic_niab = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/magic-niab.csv', index_col=0)\n",
     "\n",
     "pigs_true = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/pigs_true.csv')\n",
     "win95pts_true = pd.read_csv('https://raw.githubusercontent.com/jrzkaminski/BAMT-old/main/data/win95pts_true.csv')\n",
@@ -288,8 +288,6 @@
    "outputs": [],
    "source": [
     "def get_edges_by_localstructures(data, datatype=\"discrete\", max_local_structures=8):\n",
-    "    if 'Unnamed: 0' in data.columns:\n",
-    "        data = data.drop(['Unnamed: 0'], axis=1, inplace=True)\n",
     "\n",
     "    data.dropna(inplace=True)\n",
     "    data.reset_index(inplace=True, drop=True)\n",
